<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.sensable.client.SavedSensablesActivity" >

    <item android:id="@+id/action_about"
          android:title="@string/title_activity_about"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_login"
          android:title="@string/action_login"
          android:orderInCategory="100"
          android:showAsAction="never" />
    <item android:id="@+id/action_create"
          android:title="@string/action_create"
          android:orderInCategory="100"
          android:showAsAction="never" />
</menu>
