<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="io.sensable.client.SensableActivity">
    <Button
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/favourite_sensables_button"
            android:background="@drawable/favourite_button"
            />

    <Button
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/unfavourite_sensables_button"
            android:background="@drawable/unfavourite_button"
            />

    <TextView
            android:text="@string/sensable_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
            android:id="@+id/sensable_id_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
            android:text="@string/sensable_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
            android:id="@+id/sensable_unit_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
            android:text="@string/sensable_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
            android:id="@+id/sensable_location_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <TextView
            android:text="@string/sensable_samples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <Button
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/delete_local_button"
            android:background="@drawable/delete"
            android:visibility="gone"
            />

    <ExpandableListView
            android:id="@+id/lvExp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"/>
</LinearLayout>
